tests/analyzer/errors/assignment.rv
fn add() {}
fn main() {
    add = 1
    add() = 1

    var noval: int
    noval = 1.4
}
